# Gorgon-legacy

./: .gitmodules  CMakeLists.txt  README.md
Gorgon/src_py/: calpha_sequence_view.py  calpha_viewer.py  camera.py  main_window_form.py  volume_sse_builder_form.py
cmake/: Boost.cmake
doc/: Legacy.Doxyfile
legacy/: CMakeLists.txt  pylib.cpp.in  setup.py.in
legacy/Foundation/: GorgonHeap.h  GorgonPriorityQueue.h  GraphBase.h  OpenGLUtils.h
legacy/Gorgon/src_py/: __init__.py  auto_helix_builder_engine.py  base_viewer.py  calpha_atom_placer_form.py  calpha_flexible_fitting_form.py  calpha_interactive_loop_builder.py  calpha_sequence_view.py  calpha_structure_editor.py  calpha_structure_editor_command_atom_placement.py  calpha_structure_editor_command_change_position.py  calpha_structure_editor_command_place_helix.py  calpha_viewer.py  camera.py  gorgon.py  gorgon.pyw.in  skeleton_viewer.py  sse_helix_correspondence_finder_form.py  sse_hunter_engine.py  sse_viewer.py  testCAHelix.py  testChangingPDBAtoms.py  testPDBAtom.py  testSSEHunter.py  volume_manual_skeletonization_form.py  volume_viewer.py
legacy/Gorgon/src_py/correspondence/: StructureObservation.py  StructurePrediction.py
legacy/Gorgon/src_py/seq_model/: Chain.py  Coil.py  Helix.py  Residue.py  SeqModelTests.py  Sheet.py  Strand.py  __init__.py
legacy/GraphMatch/: BackEndInterface.h  LinkedNode.h  LinkedNodeStub.h  QueryEngine.h  SEQReader.h  SkeletonReader.h  WongMatch15ConstrainedNoFuture.h
legacy/ProteinMorph/: NonManifoldMesh.h  SSECorrespondenceSearchNode2.h
recipes/gorgon-legacy/: bld.bat  (+1 more)
